update booking and fix test

--- a/test.html
+++ b/test.html
@@ -8,6 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Room Detail - Cat Hotel</title>
 
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -20,75 +23,88 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    
-    <style type="text/css">
-        * {
-            padding: 0;
-            margin: 0;
-            font-family: Arial;
-            box-sizing: border-box;
-        }
-
-        #navbar {
-            padding: 25px 40px;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 99;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            background: #fff;
-            box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.5);
-            transition: .4s;
-            backdrop-filter: blur(5px);
-        }
-
-        #logo {
-            color: #FB6F92;
-            font-size: 23px;
-            width: 200px;
-            transition: .4s;
-            text-decoration: none;
-        }
-
-        #navbar ul {
-            display: flex;
-            list-style: none;
-            width: 300px;
-            justify-content: space-between;
-        }
-
-        #navbar ul li a {
-            text-decoration: none;
-            color: #000;
-        }
-
-        #navbar button {
-            width: 150px;
-            height: 40px;
-            border: none;
-            background: #fb6f92;
-            color: #fff;
-            cursor: pointer;
-        }
-   
-
-    </style>
 </head>
 
 <body>
-    <div id="navbar">
-        <a href="#" id="logo"><h1>Pilo Cat Hotel</h1></a>
-        <ul>
-            <li><a href="index.html">หน้าหลัก</a></li>
-            <li><a href="booking.html">จองห้อง</a></li>
-            <li><a href="#">แกลลอรี่</a></li>
-            <li><a href="contact.html">ติดต่อ</a></li>
-        </ul>
-        <a href="login.html"><button>Login</button></a>
+    <!-- Page Preloder -->
+    <div id="preloder">
+        <div class="loader"></div>
     </div>
-    <div style="padding-top: 100px;"></div>
+
+    <!-- Header Section Begin -->
+    <header class="header-section header-normal">
+        <div class="top-nav">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <ul class="tn-left">
+                            <li><i class="fa fa-phone"></i>081-123-4567</li>
+                            <li><i class="fa fa-envelope"></i>PiloCatHotel@gmail.com</li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="tn-right">
+                            <div class="top-social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-tripadvisor"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                            </div>
+                            <a href="#" class="bk-btn">Booking Now</a>
+                            <div class="language-option">
+                                <img src="img/flag.jpg" alt="">
+                                <span>EN <i class="fa fa-angle-down"></i></span>
+                                <div class="flag-dropdown">
+                                    <ul>
+                                        <li><a href="#">Zi</a></li>
+                                        <li><a href="#">Fr</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="menu-item">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-2">
+                        <div class="logo">
+                            <a href="./index.html">
+                                <img src="img/2.jpg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-10">
+                        <div class="nav-menu">
+                            <nav class="mainmenu">
+                                <ul>
+                                    <li><a href="./index.html">Home</a></li>
+                                    <li><a href="./rooms.html">Rooms</a></li>
+                                    <li><a href="./about-us.html">About Us</a></li>
+                                    <li class="active"><a href="./pages.html">Pages</a>
+                                        <ul class="dropdown">
+                                            <li><a href="./room-details.html">Room Details</a></li>
+                                            <li><a href="./blog-details.html">Blog Details</a></li>
+                                            <li><a href="#">Family Room</a></li>
+                                            <li><a href="#">Premium Room</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="./blog.html">News</a></li>
+                                    <li><a href="./contact.html">Contact</a></li>
+                                </ul>
+                            </nav>
+                            <div class="nav-right search-switch">
+                                <i class="icon_search"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Header End -->
 
     <!-- Room Detail Section Begin -->
     <section class="room-details spad">
@@ -124,27 +140,12 @@
                                 <span>Cat spa</span>
                             </div>
                         </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
-                                elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
-                                commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem
-                                imperdiet. Nunc ut sem vitae risus tristique posuere.
-                            </p>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="room-booking">
                         <h3>Your Reservation</h3>
                         <form action="#">
-                            <div class="check-date">
-                                <label for="date-in">Date In:</label>
-                                <input type="text" class="date-input" id="date-in" placeholder="dd / mm / yyyy">
-                                <i class="icon_calendar"></i>
-                            </div>
-                            <div class="check-date">
-                                <label for="date-out">Date Out:</label>
-                                <input type="text" class="date-input" id="date-out" placeholder="dd / mm / yyyy">
-                                <i class="icon_calendar"></i>
-                            </div>
                             <div class="select-option">
                                 <label for="room-type">Room Type:</label>
                                 <select class="suit-select" id="room-type">
@@ -154,23 +155,6 @@
                                     <option value="Sweet Room">Sweet Room</option>
                                 </select>
                             </div>
-                            <div class="select-option">
-                                <label for="guests">Guests:</label>
-                                <select class="suit-select" id="guests">
-                                    <option value="">1 Cat</option>
-                                    <option value="">2 Cats</option>
-                                    <option value="">3 Cats</option>
-                                    <option value="">4 Cats</option>
-                                    <option value="">5 Cats</option>
-                                    <option value="">6 Cats</option>
-                                    <option value="">7 Cats</option>
-                                    <option value="">8 Cats</option>
-                                    <option value="">9 Cats</option>
-                                    <option value="">10 Cats</option>
-                                    <!-- Add more options as needed -->
-                                </select>
-                            </div>
-                            <button type="submit" class="site-btn btn-sm">Book Now</button>
                         </form>
                     </div>
                 </div>
